Sutter Health/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Candidate Process</fullName>
        <description>Candidate Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Candidate Qualified</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Hired</fullName>
        </values>
        <values>
            <fullName>Hiring Manager Review</fullName>
        </values>
        <values>
            <fullName>Interview</fullName>
        </values>
        <values>
            <fullName>Not selected</fullName>
        </values>
        <values>
            <fullName>Offer pending</fullName>
        </values>
        <values>
            <fullName>Onboarding in progress</fullName>
        </values>
        <values>
            <fullName>Referred to posting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lead process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SHMMN Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Suspected</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>SHMMN</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SHP Sales Broker</fullName>
                </value>
                <value>
                    <fullName>SHP Sales Employer</fullName>
                </value>
                <value>
                    <fullName>SHP Sales Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Details__c</fullName>
        <label>Activity Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Rejection_Comments__c</fullName>
        <label>Approval/Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Available_Date__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>When Candidate is available to start.</inlineHelpText>
        <label>Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_URL__c</fullName>
        <label>Company URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Previous Companies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Notes__c</fullName>
        <label>Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Source__c</fullName>
        <description>Added as per Req-3618.</description>
        <label>Contact Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacted_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added as per Req-3618</description>
        <inlineHelpText>Individual who contacted the Candidate.</inlineHelpText>
        <label>Contacted by</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Converted Account)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Company_Domain__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>URL address for current company.</inlineHelpText>
        <label>Current Company Domain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Position__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>Candidate&apos;s current position.</inlineHelpText>
        <label>Current Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Details__c</fullName>
        <description>This field contains the details related to degrees that the candidate holds.</description>
        <label>Education Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>Highest level completed.</inlineHelpText>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Technical Diploma</fullName>
                </value>
                <value>
                    <fullName>Associates</fullName>
                </value>
                <value>
                    <fullName>Bachelors</fullName>
                </value>
                <value>
                    <fullName>Masters</fullName>
                </value>
                <value>
                    <fullName>PhD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Added as per Req-3618.</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Contact_Date__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>When Sourcing initially reached out to Candidate.</inlineHelpText>
        <label>First Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Added as per Req-3618.</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groups__c</fullName>
        <label>Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IM__c</fullName>
        <label>IM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>Candidate’s interests and hobbies.</inlineHelpText>
        <label>Interests</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>Generic grouping for current position.</inlineHelpText>
        <label>Job Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allied Health</fullName>
                </value>
                <value>
                    <fullName>Clerical</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Nursing</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title_Contacted_for__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>Title of open position recruiting for.</inlineHelpText>
        <label>Job Title Contacted for</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Contact_Date__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>Last communication with Candidate.</inlineHelpText>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Added as per Req-3618</description>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assigned_To__c</fullName>
        <formula>Lead_Assigned__c</formula>
        <label>Lead Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assigned__c</fullName>
        <label>Lead Assigned</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Name__c</fullName>
        <label>Lead Source Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <inlineHelpText>Overall status of Candidate in the recruiting process (e.g., has Candidate been hired).</inlineHelpText>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Referred to posting</fullName>
                </value>
                <value>
                    <fullName>Hiring Manager Review</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Offer pending</fullName>
                </value>
                <value>
                    <fullName>Onboarding in progress</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>Not Selected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_type__c</fullName>
        <label>Lead type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Licensures_Certifications__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>Candidate’s current licenses and certifications.</inlineHelpText>
        <label>Licensures/Certifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Linkedin_Id__c</fullName>
        <label>LinkedIn Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lives_In__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>Where Candidate currently resides.</inlineHelpText>
        <label>Lives In</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Location as entered in LinkedIn</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_preferences__c</fullName>
        <description>Added as per req-3618.</description>
        <inlineHelpText>Where Candidate prefers to be located.</inlineHelpText>
        <label>Location Preferences</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Carrier__c</fullName>
        <label>Major Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Blue Shield</fullName>
                </value>
                <value>
                    <fullName>Cal Choice</fullName>
                </value>
                <value>
                    <fullName>Calpers</fullName>
                </value>
                <value>
                    <fullName>Chinese Community Health Plan</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Health Net</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>Self Funded</fullName>
                </value>
                <value>
                    <fullName>Shp</fullName>
                </value>
                <value>
                    <fullName>United Health Care</fullName>
                </value>
                <value>
                    <fullName>Wha</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marked_As_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked As Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>SHMMN Employer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Persons_In_Common__c</fullName>
        <label>Persons In Common</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Added as per Req-3618.</description>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Planned_follow_up_date__c</fullName>
        <description>Added as per req-3618.</description>
        <inlineHelpText>Date in which Sourcing Team will follow up with Candidate.</inlineHelpText>
        <label>Planned Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_URL__c</fullName>
        <label>Profile URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>This field will contain the project name of LinkedIn.</description>
        <inlineHelpText>Project as entered by Recruiter in LinkedIn.</inlineHelpText>
        <label>Project</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiter_Hiring_Manager_Notes__c</fullName>
        <description>Added as per Req-3618.</description>
        <label>Recruiter/Hiring Manager Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already existing account</fullName>
                </value>
                <value>
                    <fullName>Not a competitive account</fullName>
                </value>
                <value>
                    <fullName>Not aligned with strategic goals of Sutter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary_Requirements__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>Desired hourly rate.</inlineHelpText>
        <label>Salary Requirements</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sourcing_Status__c</fullName>
        <description>Added as per Req-3618.</description>
        <label>Sourcing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sourcing_Type__c</fullName>
        <description>Added as per Req-3618.</description>
        <inlineHelpText>How Candidate was discovered.</inlineHelpText>
        <label>Sourcing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Taleo</fullName>
                </value>
                <value>
                    <fullName>Runner-up candidate</fullName>
                </value>
                <value>
                    <fullName>EE Referral</fullName>
                </value>
                <value>
                    <fullName>ACHE</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>AHA</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X30_Day_Connect_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Follow-up task to be scheduled 30 days from initial contact date.</description>
        <inlineHelpText>Follow-up task to be scheduled 30 days from initial contact date.</inlineHelpText>
        <label>30 Day Connect Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X60_Day_Connect_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Follow-up task to be scheduled 60 days from initial contact date.</inlineHelpText>
        <label>60 Day Connect Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_Day_Connect_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Follow-up task to be scheduled 90 days from initial contact date.</inlineHelpText>
        <label>90 Day Connect Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Connections__c</fullName>
        <label># of Connections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_SHMMN_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.SHMMN_Marketing_Lead</value>
        </filters>
        <label>All SHMMN Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>VP_Sales_Marketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_SHP_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.SHP_Lead</value>
        </filters>
        <label>All SHP Leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SHMMN</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead Queue</label>
        <queue>Lead_Queue</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>S3_HR_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Candidate</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Hired,Not selected</value>
        </filters>
        <label>My Leads (Closed)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>S3_HR_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Candidate</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Hired,Not selected</value>
        </filters>
        <label>My Leads (Open)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>S3_HR_Management</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_Leads_Closed</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Candidate</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Hired,Not selected</value>
        </filters>
        <label>My Team Leads (Closed)</label>
        <sharedTo>
            <role>S3_HR_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_Leads_Open</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Candidate</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Hired,Not selected</value>
        </filters>
        <label>My Team Leads (Open)</label>
        <sharedTo>
            <role>S3_HR_Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHMMN_Sales_Managers_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>SHMMN Sales Managers Queue</label>
        <queue>SHMMN_Sales_Managers_Queue</queue>
        <sharedTo>
            <group>SHMMN_Sales_Managers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Candidate</fullName>
        <active>true</active>
        <businessProcess>Candidate Process</businessProcess>
        <description>candidate Type: Supporting Candidate lead imported for sourcing and onboarding</description>
        <label>Candidate</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHMMN_Marketing_Lead</fullName>
        <active>true</active>
        <businessProcess>SHMMN Lead Process</businessProcess>
        <description>Lead record type to support SHMMN Marketing process.</description>
        <label>SHMMN Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>SHP_Lead</fullName>
        <active>true</active>
        <businessProcess>Lead process</businessProcess>
        <label>SHP Lead</label>
    </recordTypes>
</CustomObject>